# offline-secure-messenger

./: .gitignore  .gitmodules  AGENTS.md  COMPETITIVE_ANALYSIS.md  LICENSE  README.md  data_contacts.json  data_messages.json
companion-app/: README.md  build.gradle.kts  settings.gradle.kts
companion-app/androidApp/: build.gradle.kts
companion-app/desktopApp/: build.gradle.kts
companion-app/shared/: build.gradle.kts
osm/: CMakeLists.txt  DESIGN.md  README.md  lv_conf.h
osm/src/: app.c  app.h  crypto.c  crypto.h  crypto_sim.c  crypto_sim.h  main.c  tweetnacl.c
osm/src/data/: contacts.c  identity.c  identity.h  messages.c  messages.h
osm/src/hal/: hal_log.h  hal_log_posix.c  hal_rng.h  hal_rng_posix.c  hal_storage.h  hal_storage_filebd.c  hal_storage_util.h  hal_time.h  hal_time_posix.c
osm/src/screens/: scr_assign_key.c  scr_assign_key.h  scr_compose.c  scr_compose.h  scr_contacts.c  scr_contacts.h  scr_conversation.c  scr_conversation.h  scr_home.c  scr_home.h  scr_inbox.c  scr_key_exchange.c  scr_key_exchange.h  scr_setup.c  scr_setup.h  ui_common.c  ui_common.h
osm/src/transport/: transport.h  transport_ble.c  transport_common.c  transport_tcp.c
src/: app.c  app.h  io_monitor.c  io_monitor.h  main.c
src/data/: contacts.c  contacts.h  messages.c  messages.h
src/screens/: scr_compose.c  scr_compose.h  scr_contacts.c  scr_conversation.c  scr_conversation.h  scr_home.c  scr_inbox.c  scr_inbox.h  (+2 more)
tests/: ble_integration_test.py  data_contacts.json  data_identity.json  data_messages.json  e2e_test.py  launch_test_session.sh  smoke_test.py
(+13 files in other folders)
